cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled
        module2/task1/task3.cpp
        module2/task1/task4.cpp
        module2/task1/task5.cpp
        module2/task1/task6.cpp
        module2/task1/task7.cpp
        module2/task1/task8.cpp
        module2/task1/task9.cpp
        module2/task1/task10.cpp
        module2/task1/task12.cpp
        module2/task1/task11.cpp

)
